--- a/大作业首页.html
+++ b/大作业首页.html
@@ -75,15 +75,6 @@
 			</div>
 			</div>
 		</div>
-		
-
-
-
-
-
-
-
-
 		<div class="tou4">
 			<div class="zhong4">
 				<div class="tou4l">
@@ -288,7 +279,7 @@
 						<img src="img/1(1).jpg" style="float: left" />
 						<img src="img/2.jpg" style="float: left" />
 						<img src="img/3(1).png" style="float: left" />
-						<img src="img/qqq.png" style="float: left" />
+						<a href="大作业详情页.html"><img src="img/qqq.png" style="float: left" /></a>
 					</div>
 				</div>
 				<div class="neir">
