--- a/雪梨h5第二次作业.html
+++ b/雪梨h5第二次作业.html
@@ -84,6 +84,7 @@
             t3.innerHTML = l1.value;
             localStorage.setItem(l1.value,t1);
         }
+        l1.value=""
     }
     window.onload = function(){
         for(var i=0;i<localStorage.length;++i){
