--- a/1.html
+++ b/1.html
@@ -1,2 +1,10 @@
 <style>
 	.p1{
+		float: left;
+	}
+	/*.p2{*/
+	/*	float: left;
+	}*/
+</style>
+<p class=p1>省略代码。</p>
+<img src="a.jpg" class="p2">
