--- a/shouye.html
+++ b/shouye.html
@@ -700,6 +700,8 @@
 			box5.onmouseout=function(){
 				animate1(b4,{left:85})
 			}
+			alert("欢迎来到帮五买");						
+			consulelog("小兄弟 恭喜发现彩蛋")
 		</script>
 	</body>
 </html>
